--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <properties>
         <springframework.version>5.0.6.RELEASE</springframework.version>
         <hibernate.version>5.4.1.Final</hibernate.version>
-        <mysql.connector.version>8.0.16</mysql.connector.version>
+        <mysql.connector.version>5.1.16</mysql.connector.version>
         <c3po.version>0.9.5.2</c3po.version>
 
         <maven.compiler.source>11</maven.compiler.source>
@@ -21,22 +21,23 @@
 
     <dependencies>
 
+
         <!--        Spring      -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
             <version>${springframework.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-tx</artifactId>
-            <version>${springframework.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-orm</artifactId>
-            <version>${springframework.version}</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework</groupId>-->
+<!--            <artifactId>spring-tx</artifactId>-->
+<!--            <version>${springframework.version}</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework</groupId>-->
+<!--            <artifactId>spring-orm</artifactId>-->
+<!--            <version>${springframework.version}</version>-->
+<!--        </dependency>-->
 
         <!-- Add Jackson for JSON converters -->
         <dependency>
@@ -45,12 +46,26 @@
             <version>2.9.8</version>
         </dependency>
 
+        <!--        Hibernate       -->
+<!--        <dependency>-->
+<!--            <groupId>org.hibernate</groupId>-->
+<!--            <artifactId>hibernate-core</artifactId>-->
+<!--            <version>${hibernate.version}</version>-->
+<!--        </dependency>-->
+
         <!--        MySQL       -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.connector.version}</version>
         </dependency>
+
+        <!--        C3P0        -->
+<!--        <dependency>-->
+<!--            <groupId>com.mchange</groupId>-->
+<!--            <artifactId>c3p0</artifactId>-->
+<!--            <version>0.9.5.2</version>-->
+<!--        </dependency>-->
 
         <!--        Servlet + JSP     -->
         <dependency>
