--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <mysql.connector.version>5.1.16</mysql.connector.version>
         <c3po.version>0.9.5.2</c3po.version>
 
+<!--        Add new line...-->
+
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
