--- a/src/main/resources/persistence-mysql.properties
+++ b/src/main/resources/persistence-mysql.properties
@@ -3,7 +3,7 @@
 #
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/dimension_tolerance?useSSL=false&serverTimezone=UTC
-jdbc.user=hbstudent
+jdbc.user=root
 jdbc.password=HBstudent!123
 
 #
