--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,20 @@
             <version>${mysql.connector.version}</version>
         </dependency>
 
+        <!--        Test        -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.14.0</version>
+            <scope>test</scope>
+        </dependency>
+
         <!--        Servlet     -->
         <dependency>
             <groupId>javax.servlet</groupId>
