--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
             <version>3.14.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.23.4</version>
+            <scope>test</scope>
+        </dependency>
 
         <!--        Servlet     -->
         <dependency>
